--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/web-app-manifest-192x192.png">
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/web-app-manifest-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/web-app-manifest-512x512.png">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Свадьба · Вюсал и Лилия">
+    <meta property="og:description" content="Приглашение и подробности">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://Fenricci.github.io/wedding/site-share.png">
+    <meta name="twitter:card" content="summary_large_image">
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Wedding</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
